--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -1,7 +1,7 @@
-* Updated Intune policies of Device Guard category to have the recently added security features.
+* Added a new page called CSP. This page allows you to inspect and query Windows Configuration Service Provider (CSP) policies. It parses Policy DDF (Device Description Framework) files that are either sourced from local XML files you browse for or downloaded directly from Microsoft server to generate a comprehensive catalog of available system settings. The Harden System Security app interacts with the local MDM (Mobile Device Management) client to query the live system state of these policies via their OMA-URIs, providing real-time visibility into current configurations, default values, and allowed operations (`Get`, `Add`, `Replace`, `Delete`).
 
-* Aligned the Intune policies of Windows Firewall category and improved their detections on the system.
+    * You have the option to export all of the results to a JSON file as backup. It is full of information about the current system state.
 
-* Added 2 more countries to the Country IP Blocking page.
+* The Optional Windows Features category now has a sub-category that allows you to control the inclusion of recommended features and capabilities to be enabled. It's added as a Checkbox in the Protect page. It is checked when system is not a virtual machine and unchecked when it's a virtual machine.
 
-* Updated Intune policies for Exploit Mitigations to align with what the app locally applies.
+* Fixed the detection of Intel TDD when it is applied via Intune.
