--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,19 +1,3 @@
-* Added real-time CPU temperature to the Home page.
+* Fixed an issue where you'd have to click/tap the Deploy button twice in the Deployment page to deploy a signed policy: https://github.com/HotCakeX/Harden-Windows-Security/issues/948
 
-* Added advanced CPU details to the home page.
-
-* Added Computer name to the home page.
-
-* Added OS edition, version and build information to the home page.
-
-* Added RAM speed and generation details to the home page.
-
-* Added real-time total amount of Internet uploaded data and downloaded data to the home page.
-
-* Features in the home page that display real-time data such as CPU temperature, network speed and so on, are highly optimized, fast and only active when the user is on the home page. If you navigate away to another page, they will stop gathering data and will not run in the background so they do not consume unnecessary resources.
-
-* The time it takes from clicking on the app icon on taskbar or start menu to launch it to the home page load is less than 1 second and will stay that way.
-
-* Localized the home page information for all of the supported languages.
-
-* Significantly improved the speed and performance of the Event Log Policy Creation. Now the scans of Code Integrity and App Locker event logs from local system or custom EVTX files *take half of the time* compared to the previous version. This performance boost is achieved by implementing new algorithms and optimizations in the scanning engine, rather than simply using more CPU cores and parallelism. The system resource usage actually remains the same as before or even lower in some cases, while the speed is greatly improved.
+* The View File Certificates page now shows the certificates of files with revoked, expired or Hash mismatch certificates: https://github.com/HotCakeX/Harden-Windows-Security/issues/947
